--- a/public/css/cms.css
+++ b/public/css/cms.css
@@ -355,10 +355,14 @@ img.right {
 	margin: 3px 0px 10px 30px;
 }
 /** RULES FOR TABLE **/
+.entry table{padding: 5px; border: 1px solid #74949C;}
 .entry table thead td{}
 .entry table tbody td{}
-.entry table tbody td input{}
-.entry table tbody td input:focus{}
+.entry table tbody td input{ border: 1px solid #B5B5B5; background-color: #FFF; padding: 2px; }
+.entry table tbody td input:focus{ border: 1px solid #74949C; background-color: #E8F0F0;}
 .entry table tbody td textarea{}
 .entry table tfoot td{}
-.entry table tfoot td input{font-family:Arial, Helvetica, sans-serif; font-size:10px; font-weight: bold; color: #74d1f6; background-color: #FFFFFF; text-align: center; width: 80px;}
+.entry table tfoot td button{border: none; margin: 5px 0px; color: #787872; font-size: 12px; background: url(../images/img06.jpg) no-repeat scroll left top; display: block; height: 28px; text-align: center; width: 120px;}
+
+/** WARNING MESSAGE **/
+.j_warning {border:solid 1px #CC3333!important; background-color:#FFCCCC!important; color:#CC3333!important;}
