--- a/trunk/public/css/cms.css
+++ b/trunk/public/css/cms.css
@@ -359,7 +359,8 @@ img.right {
 	margin: 3px 0px 10px 30px;
 }
 /** RULES FOR TABLE **/
-.entry table{padding: 5px; border: 1px solid #74949C;}
+.entry table{}
+.entry table tbody{ padding: 5px; border: 1px solid #74949C;}
 .entry table thead td{}
 .entry table tbody td{}
 .entry table tbody td input{ border: 1px solid #B5B5B5; background-color: #FFF; padding: 2px; }
