--- a/trunk/public/css/cms.css
+++ b/trunk/public/css/cms.css
@@ -320,9 +320,9 @@ img.right { float: right;margin: 3px 0px 10px 30px;}
 .entry table th{ background-color:#74D1F6; font-family: Arial, Helvetica, sans-serif;font-size: 11px; color: #FFFFFF; text-align: left; padding-top: 5px; padding-bottom: 5px;	padding-left: 3px;}
 .entry table tbody td{ border-right-width: 0px;	border-left-width: 0px;	border-right-style: none; border-left-style: none; border-top-width: 0px; border-bottom-width: 0px; border-top-style: none; border-bottom-style: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: left; padding-top: 3px; padding-bottom: 3px; padding-left: 5px; background-color: #FFFFFF;}
 
-.odd{ background-color: #90daf8; color: #ffffff;}
+.odd{ background-color:#FFFFFF}
 .even{ background-color: #F0F0F0;}
-.over{}
+.over{background-color: #90daf8; color: #ffffff;}
 
 .entry table tbody td input{border: 1px solid #6ea1cf;background-color: #FFF;padding: 2px;}
 .entry table tbody td input:focus{border: 1px solid #6ea1cf;background-color: #F0F0F0;}
