--- a/trunk/public/css/cms.css
+++ b/trunk/public/css/cms.css
@@ -318,7 +318,7 @@ img.right { float: right;margin: 3px 0px 10px 30px;}
 .entry table{}
 .entry table tbody{ font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: left; padding: 5px; border: 1px solid #74949C;}
 .entry table th{ background-color:#74D1F6; font-family: Arial, Helvetica, sans-serif;font-size: 11px; color: #FFFFFF; text-align: left; padding-top: 5px; padding-bottom: 5px;	padding-left: 3px;}
-.entry table tbody td{ border-right-width: 0px;	border-left-width: 0px;	border-right-style: none; border-left-style: none; border-top-width: 0px; border-bottom-width: 0px; border-top-style: none; border-bottom-style: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: left; padding-top: 3px; padding-bottom: 3px; padding-left: 5px; background-color: #FFFFFF;}
+.entry table tbody td{ border-right-width: 0px;	border-left-width: 0px;	border-right-style: none; border-left-style: none; border-top-width: 0px; border-bottom-width: 0px; border-top-style: none; border-bottom-style: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: left; padding-top: 3px; padding-bottom: 3px; padding-left: 5px; }
 
 .odd{ background-color:#FFFFFF}
 .even{ background-color: #F0F0F0;}
