--- a/trunk/public/css/cms.css
+++ b/trunk/public/css/cms.css
@@ -1,6 +1,6 @@
 body { margin: 0; padding: 0; background: #F6F6F6; font-size: 13px; text-align: justify;}
 body, th, td, input, textarea, select, option { font-family: Arial, Helvetica, sans-serif; color: #83826A; font-size: 11px; border-top-width: 1px; border-top-style: dotted; border-top-color: #6ea1cf; padding-top: 1px; padding-bottom: 1px; padding-left: 3px;}
-h1, h2, h3 { font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: #6ea1cf;}
+h1, h2, h3 { font-family: Arial, Helvetica, sans-serif; font-weight: normal; color: #6ea1cf;}
 h1 {
 	letter-spacing: -2px;
 	font-size: 3em;
