--- a/trunk/public/css/cms.css
+++ b/trunk/public/css/cms.css
@@ -1,5 +1,12 @@
 body { margin: 0; padding: 0; background: #F6F6F6; font-size: 13px; text-align: justify;}
-body, th, td, input, textarea, select, option { font-family: Arial, Helvetica, sans-serif; color: #83826A; font-size: 11px; border-top-width: 1px; border-top-style: dotted; border-top-color: #6ea1cf; padding-top: 1px; padding-bottom: 1px; padding-left: 3px;}
+body, th, td, input, textarea, select, option {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #83826A;
+	font-size: 11px;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	padding-left: 3px;
+}
 h1, h2, h3 { font-family: Arial, Helvetica, sans-serif; font-weight: normal; color: #6ea1cf;}
 h1 {
 	letter-spacing: -2px;
@@ -317,19 +324,19 @@ img.right { float: right;margin: 3px 0px 10px 30px;}
 /** RULES FOR TABLE **/
 .entry table{}
 .entry table tbody{ font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: left; padding: 5px; border: 1px solid #74949C;}
-.entry table th{ background-color:#74D1F6; font-family: Arial, Helvetica, sans-serif;font-size: 11px; color: #FFFFFF; text-align: left; padding-top: 5px; padding-bottom: 5px;	padding-left: 3px;}
+.entry table th{ background-color:#74D1F6; font-family: Arial, Helvetica, sans-serif; font-size: 11px; color: #FFFFFF; text-align: left; padding-top: 7px; padding-bottom: 7px; padding-left: 10px; border-bottom-width: 1px; border-bottom-style: dotted; border-bottom-color: #FFFFFF;}
 .entry table tbody td{ border-right-width: 0px;	border-left-width: 0px;	border-right-style: none; border-left-style: none; border-top-width: 0px; border-bottom-width: 0px; border-top-style: none; border-bottom-style: none; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: left; padding-top: 3px; padding-bottom: 3px; padding-left: 5px; }
 
 .odd{ background-color:#FFFFFF}
 .even{ background-color: #F0F0F0;}
-.over{background-color: #90daf8; color: #ffffff;}
+.over{background-color: #74D1F6; color: #ffffff;}
 
 .entry table tbody td input{border: 1px solid #6ea1cf;background-color: #FFF;padding: 2px;}
 .entry table tbody td input:focus{border: 1px solid #6ea1cf;background-color: #F0F0F0;}
 .entry table tbody td textarea{ border: 1px solid #6EA1CF;font-family: Arial, Helvetica, sans-serif; font-size: 11px;}
 .post .entry #radio{ border: 1px solid 6ea1cf; background-color: #FFFFFF;}
 .entry table tfoot td{}
-.entry table tfoot td button{ border: 1px solid #6EA1CF; color: #74D1F6; font-size: 10px; display: block; height: 20px; text-align: center; width: 90px; font-family: Arial, Helvetica, sans-serif; margin-top: 5px; margin-right: 0px;	margin-bottom: 5px;	margin-left: 0px; font-weight: bold;	background-color: #FFFFFF;}
+.entry table tfoot td button{ border: 1px solid #6EA1CF; color: #74D1F6; font-size: 10px; display: block; height: 20px; text-align: center; width: 90px; font-family: Arial, Helvetica, sans-serif; margin-top: 15px; margin-right: 50px;	margin-bottom: 5px;	margin-left: 0px; font-weight: bold;	background-color: #FFFFFF;}
 
 /** WARNING MESSAGE **/
 .j_warning {border:solid 1px #CC3333!important; background-color:#FFCCCC!important; color:#CC3333!important;}
